Fix slight misalignment with map tiles

--- a/Etch.OrchardCore.Leaflet/Assets/Common/css/_leaflet.scss
+++ b/Etch.OrchardCore.Leaflet/Assets/Common/css/_leaflet.scss
@@ -19,3 +19,8 @@
 .leaflet--admin {
     margin-bottom: 3rem;
 }
+
+.leaflet-container .leaflet-tile {
+    height: 257.5px !important;
+    width: 257.5px !important;
+}
